added polarsignals devs and alphabetized
Signed-off-by: Joe Elliott <number101010@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* joe-elliott mdisibio kevinburkesegment achille-roussel gernest
+* @achille-roussel @asubiotto @brancz @gernest @joe-elliott @kevinburkesegment @mdisibio @metalmatze @thorfour
