--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @achille-roussel @asubiotto @brancz @gernest @joe-elliott @kevinburkesegment @mdisibio @metalmatze @thorfour
+* @achille-roussel @asubiotto @brancz @joe-elliott @kevinburkesegment @mdisibio @metalmatze @Pryz @thorfour
