--- a/.github/workflows/thirdparty.yaml
+++ b/.github/workflows/thirdparty.yaml
@@ -34,6 +34,6 @@ jobs:
       - name: Run Critical Tempo Tests
         run: |
           cd tempo
-          go test ./tempodb/encoding/vparquet4/...
+          go test ./tempodb/encoding/vparquet*/...
           go test ./tempodb/wal/...
           go test ./tempodb/...
