test all vparquet*

--- a/.github/workflows/thirdparty.yaml
+++ b/.github/workflows/thirdparty.yaml
@@ -35,6 +35,11 @@ jobs:
       - name: Run Critical Tempo Tests
         run: |
           cd tempo
-          go test ./tempodb/encoding/vparquet*/...
+          for dir in $(find ./tempodb/encoding -type d -name "vparquet*"); do
+            echo "Testing $dir..."
+            go test $dir/...
+          done
+          echo "Testing tempodb/wal..."
           go test ./tempodb/wal/...
+          echo "Testing tempodb..."
           go test ./tempodb/...
