--- a/.github/workflows/thirdparty.yaml
+++ b/.github/workflows/thirdparty.yaml
@@ -10,9 +10,6 @@ on:
 jobs:
   third-party-tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        go: ['1.22.x']
 
     steps:
       - name: Checkout parquet-go
@@ -22,9 +19,9 @@ jobs:
         run: git clone https://github.com/grafana/tempo.git
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version-file: "tempo/go.mod"
 
       - name: Replace parquet-go with local version
         run: |
