--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,6 @@ jobs:
   test:
     strategy:
       matrix:
-        go:
-          - "oldstable"
         tags:
           - ""
           - purego
@@ -43,10 +41,10 @@ jobs:
           mvn --file parquet-java-apache-parquet-1.13.1/parquet-cli/pom.xml install -DskipTests
           mvn --file parquet-java-apache-parquet-1.13.1/parquet-cli/pom.xml dependency:copy-dependencies
 
-      - name: Setup Go ${{ matrix.go }}
+      - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version-file: "go.mod"
 
       - name: Download Dependencies
         run: go mod download
@@ -67,9 +65,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Go ${{ matrix.go }}
+      - name: Setup Go
         uses: actions/setup-go@v5
         with:
+          # TODO: update to using the version in go.mod when that version supports the go tool directive (1.24.x)
+          # go-version-file: "go.mod"
           go-version: 1.24.x
 
       - name: Validate formatting
@@ -85,7 +85,7 @@ jobs:
 
   #     - uses: actions/setup-go@v3
   #       with:
-  #         go-version: 1.24.x
+  #          go-version-file: "go.mod"
 
   #     - name: golangci-lint
   #       uses: golangci/golangci-lint-action@v3
