--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,9 +68,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          # TODO: update to using the version in go.mod when that version supports the go tool directive (1.24.x)
-          # go-version-file: "go.mod"
-          go-version: 1.24.x
+          go-version-file: "go.mod"
 
       - name: Validate formatting
         run: |
