--- a/.github/workflows/thirdparty.yaml
+++ b/.github/workflows/thirdparty.yaml
@@ -26,6 +26,7 @@ jobs:
       - name: Replace parquet-go with local version
         run: |
           cd tempo
+          go mod tidy
           go mod edit -replace github.com/parquet-go/parquet-go=${{ github.workspace }}
           go mod vendor
       - name: Run critical Tempo tests
